--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6d1313d779591e3e5d7d",
+    "/css/app.css": "/css/app.css?id=787804d0cf1f2b68cf5f"
 }
